@@ -44,8 +44,8 @@
 		8D01CCD20486CAD60068D4B7 /* tutorial.vst */ = {isa = PBXFileReference; explicitFileType = wrapper.cfbundle; includeInIndex = 0; path = tutorial.vst; sourceTree = BUILT_PRODUCTS_DIR; };
 		F405CDB50B048647008E3886 /* TutorialEditor.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; name = TutorialEditor.h; path = ../source/TutorialEditor.h; sourceTree = SOURCE_ROOT; };
 		F405CDB60B048647008E3886 /* TutorialEditor.cpp */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.cpp.cpp; name = TutorialEditor.cpp; path = ../source/TutorialEditor.cpp; sourceTree = SOURCE_ROOT; };
-		F405CDC10B048736008E3886 /* aeffguieditor.cpp */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.cpp.cpp; name = aeffguieditor.cpp; path = ../../lib/aeffguieditor.cpp; sourceTree = SOURCE_ROOT; };
-		F405CDC20B048736008E3886 /* aeffguieditor.h */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.c.h; name = aeffguieditor.h; path = ../../lib/aeffguieditor.h; sourceTree = SOURCE_ROOT; };
+		F405CDC10B048736008E3886 /* aeffguieditor.cpp */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.cpp.cpp; name = aeffguieditor.cpp; path = "../../plugin-bindings/aeffguieditor.cpp"; sourceTree = SOURCE_ROOT; };
+		F405CDC20B048736008E3886 /* aeffguieditor.h */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.c.h; name = aeffguieditor.h; path = "../../plugin-bindings/aeffguieditor.h"; sourceTree = SOURCE_ROOT; };
 		F405CDFA0B048824008E3886 /* aeffeditor.h */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.c.h; name = aeffeditor.h; path = ../vstsdk2.4/public.sdk/source/vst2.x/aeffeditor.h; sourceTree = SOURCE_ROOT; };
 		F405CDFB0B048824008E3886 /* audioeffect.cpp */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.cpp.cpp; name = audioeffect.cpp; path = ../vstsdk2.4/public.sdk/source/vst2.x/audioeffect.cpp; sourceTree = SOURCE_ROOT; };
 		F405CDFC0B048824008E3886 /* audioeffect.h */ = {isa = PBXFileReference; fileEncoding = 30; lastKnownFileType = sourcecode.c.h; name = audioeffect.h; path = ../vstsdk2.4/public.sdk/source/vst2.x/audioeffect.h; sourceTree = SOURCE_ROOT; };
